********************************************************************
						V1.4
********************************************************************



#### TODO : function do_field
********************************************************************
function do_field($sql,$fld,$dbfld){

This function is defined in many places, need to create in misc.php
and remove it from other page where it s used (mainly in report section)


#### TODO : Detach Selling ratecard from Buying ratecard - DEPRECIATED 
********************************************************************
- you need to update the selling prices multiple times
- you cannot really remove the sorter matching prefixes as you do right now, since one provider can have more granularity than other


#### MASS MAIL FEATURE
********************************************************************
option to let send an email to all the a2billing user
- check how is it done on phpBB
if we have several thousand of mail to send this can be an issue with normal php scripts
maybe a daemon is needed

* We should be able to define the search Criteria as in View Card in order to preselect
only some customer to which u want to run the massmail


#### BUG : REMOVING A CALLPLAN
********************************************************************
When removing a CallPlan, the card assigned are removed as well...


#### TRUNK CHANGE : UPDATE DAEMON TO USE THE DB CONF
********************************************************************
read conf from the DB

	my $manager_host = $cfg->val('global', 'manager_host');
	my $manager_username = $cfg->val('global', 'manager_username');
	my $manager_secret = $cfg->val('global', 'manager_secret');


#### TODO : CRITERIA CALLPLAN
********************************************************************
I added Callplan on CDR report, see revision 303, we need to add the same on the 3 pages :
(Section Call Report)
# Calls Compare
# Monthly Traffic
# Daily Load
