@@ -4,13 +4,6 @@
 *******************************************************************************
 
 
-
-
-#### EXPORT RATECARD
-********************************************************************
-Add all field on the export csv
-
-
 #### OPTIMIZE RATE-ENGINE
 ********************************************************************
 1)
