@@ -3,6 +3,10 @@
 ********************************************************************
 
 
+#### EXPORT RATECARD
+********************************************************************
+Add all field on the export csv
+
 
 #### TODO : function do_field
 ********************************************************************
